# IMEI_Validation_Service

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: access_control.py  config.py  main.py
app/common/: logging.py
app/integrations/: access_control_service.py  factories.py  imeicheck_net_api.py  send_request.py
app/interfaces/: access_control_service_interface.py  imei_check_api_interface.py
app/routes/: check_imei_router.py
app/schemes/: pyd.py
app/services/: check_imei_service.py
app/stubs/: access_control_service_stub.py
